--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -13,15 +13,15 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4B0082;">
             <div class="container">
-                <a class="navbar-brand" href="#!">Blog Code</a>
+                <a class="navbar-brand" href="index.html">Blog Code</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#!">Contato</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="contact.html">Contato</a></li>
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Blog</a></li>
 
                         
@@ -50,7 +50,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
+        <footer class="py-5" style="background-color: #4B0082;">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Blog Code 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
