--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -13,9 +13,9 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4B0082;">
             <div class="container">
-                <a class="navbar-brand" href="#!">Blog Code</a>
+                <a class="navbar-brand" href="index.html">Blog Code</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -28,11 +28,11 @@
             </div>
         </nav>
         <!-- Page header with logo and tagline-->
-        <header class="py-5 bg-light border-bottom mb-4">
+        <header class="py-5 bg-Indigo border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">Bem vindo ao Blog Code!</h1>
-                    <p class="lead mb-0">O blog para você codar!</p>
+                    <h1 class="fw-bolder">Blog Code</h1>
+                    <p class="lead mb-0">Artigos para codar!</p>
                 </div>
             </div>
         </header>
@@ -45,9 +45,9 @@
                     <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
-                            <h2 class="card-title">Última Publicação</h2>
+                            <h2 class="card-title">Titulo da última publicação</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                            <a class="btn btn-primary" href="post_details.html">Ler Mais →</a>
+                            <a class="btn btn-dark" href="post_details.html">Ler Mais →</a>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
@@ -59,7 +59,7 @@
                                 <div class="card-body">
                                     <h2 class="card-title h4">Título</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="post_details.html">Ler Mais →</a>
+                                    <a class="btn btn-dark" href="post_details.html">Ler Mais →</a>
                                 </div>
                             </div>
                             <!-- Blog post-->
@@ -68,7 +68,7 @@
                                 <div class="card-body">
                                     <h2 class="card-title h4">Título</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="post_details.html">Ler Mais →</a>
+                                    <a class="btn btn-dark" href="post_details.html">Ler Mais →</a>
                                 </div>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                                 <div class="card-body">
                                     <h2 class="card-title h4">Título</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="post_details.html">Ler Mais →</a>
+                                    <a class="btn btn-dark" href="post_details.html">Ler Mais →</a>
                                 </div>
                             </div>
                             <!-- Blog post-->
@@ -88,24 +88,11 @@
                                 <div class="card-body">
                                     <h2 class="card-title h4">Título</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="post_details.html">Ler Mais →</a>
+                                    <a class="btn btn-dark" href="post_details.html">Ler Mais →</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Pagination-->
-                    <nav aria-label="Pagination">
-                        <hr class="my-0" />
-                        <ul class="pagination justify-content-center my-4">
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Página(s)</a></li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">Última</a></li>
-                        </ul>
-                    </nav>
                 </div>
                 <!-- Side widgets-->
                 <div class="col-lg-4">
@@ -115,7 +102,7 @@
                         <div class="card-body">
                             <div class="input-group">
                                 <input class="form-control" type="text" placeholder="Digite o termo a ser pesquisado" aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Buscar</button>
+                                <button class="btn btn-dark" id="button-search" type="button">Buscar</button>
                             </div>
                         </div>
                     </div>
@@ -128,8 +115,8 @@
             </div>
         </div>
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+        <footer class="py-5" style="background-color: #4B0082;">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Blog Code 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
